--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.jpa.database=postgresql
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost/empleados
+#spring.datasource.username=postgres
+#spring.datasource.password=Joserba84
+
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
